# rag_prep_tool

./: README.md  pyproject.toml
.github/workflows/: CI.yml
scripts/: Llama3-8B.ipynb  phi3-mini-128k.ipynb
src/rag_prep_tool/: config.py  utils.py  vars.py
src/rag_prep_tool/chunk_database/: __init__.py
src/rag_prep_tool/chunking/: __init__.py  map_metadata.py
src/rag_prep_tool/graph_db/: extract_kg_triplets.py  get_chatgpt_response.py  get_triplets.py  llm.py  text_processing.py
src/rag_prep_tool/preprocessing/: build_metadata.py  clean_text.py  extract_text.py  preprocess.py  transfer_annotation.py
src/rag_prep_tool/vector_db/chunk_database/: __init__.py
src/rag_prep_tool/vector_db/preprocessing/: build_metadata.py  extract_text.py  preprocess.py  transfer_annotation.py
tests/: test_example.py
tests/chunk_database/load_chunks/: test_load_chunks.py
tests/chunk_database/store_chunks/: test_store_chunks.py
tests/chunk_database/store_chunks/data/: art_of_happiness.json  art_of_happiness.txt
tests/chunking/map_metadata/: test_map_metadata.py
tests/chunking/sentence_splitter/: test_sentence_splitter.py
tests/preprocessing/build_metadata/: config.py  test_build_metadata.py
tests/preprocessing/build_metadata/data/: expected_metadata.json  expected_output_metadata.json  page_annoted_text.txt
tests/preprocessing/clean_text/: test_clean_text.py
tests/preprocessing/extract_text/: test_extract_text.py
tests/preprocessing/extract_text/data/: expected_extracted_file.json
tests/preprocessing/transfer_annotation/: test_transfer_annotation.py
(+13 files in other folders)
